[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main Menu/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.667419
margin_bottom = -0.667419
color = Color( 0.490196, 0.490196, 0.490196, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 100.0
text = "Untitled Coal Mining Game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -80.0
margin_top = 80.0
margin_right = 80.0
margin_bottom = -80.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEditName" type="LineEdit" parent="VBoxContainer"]
margin_top = 101.0
margin_right = 160.0
margin_bottom = 125.0
placeholder_text = "Name"
caret_blink = true

[node name="ButtonHost" type="Button" parent="VBoxContainer"]
margin_top = 175.0
margin_right = 160.0
margin_bottom = 195.0
text = "Host Game"

[node name="ButtonConnect" type="Button" parent="VBoxContainer"]
margin_top = 245.0
margin_right = 160.0
margin_bottom = 265.0
text = "Connect"

[node name="LineEditIP" type="LineEdit" parent="VBoxContainer"]
margin_top = 315.0
margin_right = 160.0
margin_bottom = 339.0
text = "127.0.0.1"
placeholder_text = "IP"
caret_blink = true
[connection signal="pressed" from="VBoxContainer/ButtonHost" to="." method="_on_ButtonHost_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonConnect" to="." method="_on_ButtonConnect_pressed"]
